[gd_scene load_steps=6 format=3 uid="uid://dhyy1nc0vilql"]

[ext_resource type="Script" path="res://scenes/Pipes/pipes.gd" id="1_5w0lc"]
[ext_resource type="PackedScene" uid="uid://djepmoscvb2qu" path="res://scenes/Lazer/lazer.tscn" id="1_pev84"]
[ext_resource type="PackedScene" uid="uid://bp2haiyk446y4" path="res://scenes/Pipe/pipe.tscn" id="2_wnyoh"]
[ext_resource type="AudioStream" uid="uid://b7nue332jtk5a" path="res://assets/audio/score.wav" id="3_xgst8"]

[sub_resource type="GDScript" id="GDScript_ejkq1"]
script/source = "extends AudioStreamPlayer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Pipes" type="Node2D"]
script = ExtResource("1_5w0lc")

[node name="Lazer" parent="." instance=ExtResource("1_pev84")]

[node name="Upper" parent="." instance=ExtResource("2_wnyoh")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_wnyoh")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(55, 0)

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xgst8")
script = SubResource("GDScript_ejkq1")

[connection signal="body_entered" from="Lazer" to="." method="_on_lazer_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on__screen_exited"]
